...
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <string name="update_downloaded">Woo has downloaded an update</string>
    <string name="update_failed">Woo update has failed</string>
    <string name="continue_button">Continue</string>
    <string name="refresh_button">Refresh</string>
    <string name="untitled">Untitled</string>
    <string name="cancel">Cancel</string>
    <string name="keep_editing">Keep editing</string>
    <string name="learn_more">Learn More</string>
    <string name="try_it_now">Try it now</string>
    <string name="offline_message">Offline \u2014 using cached data</string>
    <string name="offline_error">Your network is unavailable. Check your data or wifi connection.</string>
    <string name="product">Product</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="discard">Discard</string>
    <string name="products">Products</string>
    <string name="refunds">Refunds</string>
    <string name="product_variations">Variations</string>
    <string name="review_notifications">Reviews</string>
    <string name="version_with_name_param">Version %s</string>
    <string name="share_store_button">Share your store</string>
...
    <string name="orderdetail_customer_image_contentdesc">Customer profile image</string>
    <string name="orderdetail_note_hint">Compose an order note</string>
    <string name="orderdetail_note_private">Private</string>
    <string name="orderdetail_note_public">To customer</string>
    <string name="orderdetail_note_system">System</string>
    <string name="orderdetail_order_notes">Order notes</string>
    <string name="orderdetail_order_fulfillment">Fulfill Order #%s</string>
    <string name="orderdetail_payment_cleared">Payment Cleared</string>
    <string name="orderdetail_show_billing">Show Billing</string>
    <string name="orderdetail_hide_billing">Hide Billing</string>
    <string name="orderdetail_add_note">Add a note</string>
    <string name="orderdetail_addnote_contentdesc">Add an order note</string>
    <string name="orderdetail_change_order_status">Click to change order status</string>
...
    <string name="orderstatus_cancelled">Cancelled</string>
    <string name="orderstatus_refunded">Refunded</string>
    <string name="orderstatus_contentDesc">Order status</string>
    <!--
        Add Shipment Tracking Labels
    -->
    <string name="order_shipment_tracking_toolbar_title">Add Tracking</string>
    <string name="order_shipment_tracking_carrier_label">Carrier</string>
    <string name="order_shipment_tracking_number_label">Tracking number</string>
    <string name="order_shipment_tracking_custom_provider_name_label">Carrier name</string>
    <string name="order_shipment_tracking_custom_provider_url_label">Tracking link (optional)</string>
    <string name="order_shipment_tracking_provider_hint">Select carrier</string>
    <string name="order_shipment_tracking_number_hint">Enter Tracking number</string>
    <string name="order_shipment_tracking_custom_provider_name_hint">Enter carrier name</string>
    <string name="order_shipment_tracking_custom_provider_url_hint">Enter tracking link</string>
    <string name="order_shipment_tracking_date_label">Date shipped</string>
    <string name="order_shipment_tracking_provider_toolbar_title">Shipping Carriers</string>
    <string name="order_shipment_tracking_provider_list_item">Selected Shipment carrier</string>
    <string name="order_shipment_tracking_provider_list_error_fetch_generic">Error fetching carriers</string>
    <string name="order_shipment_tracking_provider_list_error_empty_list">No carriers found</string>
    <string name="order_shipment_tracking_added">Shipment tracking added</string>
    <string name="order_shipment_tracking_error">Unable to add tracking</string>
    <string name="order_shipment_tracking_confirm_discard">Are you sure you want to discard this tracking?</string>
    <string name="order_shipment_tracking_empty_provider">Please select a carrier</string>
    <string name="order_shipment_tracking_empty_tracking_num">Please enter a tracking number</string>
    <string name="order_shipment_tracking_empty_custom_provider_name">Please enter a carrier name</string>
    <string name="order_shipment_tracking_custom_provider_section_title">Custom</string>
    <string name="order_shipment_tracking_custom_provider_section_name">Custom Carrier</string>
    <!--
        Notifications
    -->
    <string name="new_notifications">%d new notifications</string>
    <string name="more_notifications">and %d more.</string>
    <!--
...
