...
                style="@style/Woo.TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_shipment_tracking_carrier_label"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addTracking_editCarrier"
                style="@style/Woo.OrderTracking.Add.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/list_divider"
                android:gravity="top"
...
                    android:text="@string/order_shipment_tracking_custom_provider_name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addTracking_custom_provider_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:gravity="top"
                    android:hint="@string/order_shipment_tracking_custom_provider_name_hint"
                    android:inputType="text"
                    android:maxLength="@integer/max_length_tracking_number"
                    android:nextFocusForward="@+id/addTracking_number"
                    android:paddingBottom="@dimen/margin_extra_large"
                    android:theme="@style/Woo.OrderTracking.Add.EditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addTracking_custom_provider_name_label"/>

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/order_shipment_tracking_date_label"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addTracking_date"
                style="@style/Woo.OrderTracking.Add.EditText"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="@color/list_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
...
